Classloader Performance Improvements #1
- enhanced jar cache and added more unit tests